2009-01-11  Ira Rosen  <irar@il.ibm.com>

	Backport from mainline:
	2008-12-29  Dorit Nuzman  <dorit@il.ibm.com>
	            Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/38529
	* tree-vect-transform (vect_transform_stmt): Handle inner-loop stmts
	whose DEF is used in the loop-nest that is being vectorized, but
	outside the immediately enclosing loop.

2009-01-07  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* pa.c (output_call): Relocate non-jump insns in the delay slot of long
	absolute calls when generating PA 2.0 code.

2009-01-07  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38752
	* tree-ssa-structalias.c (set_uids_in_ptset): Do not assert we
	find a subvariable as we might have invalid accesses.

2009-01-07  Danny Smith  <dannysmith@users.sourceforge.net>

	PR target/36654
	* config/i386/winnt-cxx.c (i386_pe_type_dllimport_p): Check
	DECL_NOT_REALLY_EXTERN rather than !DECL_EXTERNAL

2009-01-07  Gerald Pfeifer  <gerald@pfeifer.com>

	* doc/install.texi (alpha*-dec-osf*): Remove note on 32-bit
	hosted cross-compilers generating less efficient code.

2009-01-04  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2008-06-12  Eric Botcazou  <ebotcazou@adacore.com>

	* expr.c (store_field): Do a block copy from BLKmode to BLKmode-like.
	(get_inner_reference): Use BLKmode for byte-aligned BLKmode bitfields.

2008-12-18  Andrew Pinski  <andrew_pinski@playstation.sony.com>

	PR middle-end/38565
	* gimplifier.c (gimplify_init_constructor): For constant vector
	CONSTRUCTORs use GENERIC_TREE_OPERAND instead of TREE_OPERAND.

2008-12-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/38062
	Backport from mainline:
	2008-04-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* collect2.c (write_c_file): Don't wrap in "#ifdef __cplusplus".

2008-12-12  Rainer Emrich  <r.emrich@de.tecosim.com>

	PR bootstrap/38383
	* pa64-hpux.h (LINK_GCC_C_SEQUENCE_SPEC): Don't hardcode search path
	for the milli.a library.
